--- a/www.parliament.nz/05fdd56883d7d8786cb72a10ce079ab8d1c418ee.html
+++ b/www.parliament.nz/05fdd56883d7d8786cb72a10ce079ab8d1c418ee.html
@@ -22,7 +22,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-	<script type="text/javascript" src="/ruxitagentjs_ICA2SVfqr_10151180821210004.js" data-dtconfig="rid=RID_-752822841|rpid=1611560751|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|bp2=1|featureHash=ICA2SVfqr|dpvc=1|lastModification=1537756700065|dtVersion=10151180821210004|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_ICA2SVfqr_10151180821210004.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="/ruxitagentjs_ICA2SVfjqr_10151180821210004.js" data-dtconfig="rid=RID_-752822841|rpid=-1227363828|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|bp2=1|featureHash=ICA2SVfjqr|dpvc=1|lastModification=1537921240293|dtVersion=10151180821210004|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_ICA2SVfjqr_10151180821210004.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<!--[if (gt IE 9) | (IEMobile)]><!-->
 	<link rel="stylesheet" type="text/css" href="/content/css/style.EFJhSg.css">
 	<!--<![endif]-->
@@ -606,36 +606,6 @@
 									<li class="header__mobile-footer-nav-item">
 										<a href="/en/footer/about-us/" target="_top" class="header__mobile-footer-nav-link" title="About Us">About Us</a>
 									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/visit-and-learn/how-parliament-works/glossary/" class="header__mobile-footer-nav-link" title="Glossary">Glossary</a>
-									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/footer/faqs/" target="_top" class="header__mobile-footer-nav-link" title="FAQs">FAQs</a>
-									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/footer/jobs/" class="header__mobile-footer-nav-link" title="Careers">Careers</a>
-									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/footer/contact-us/" target="_top" class="header__mobile-footer-nav-link" title="Contact us">Contact us</a>
-									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/footer/accessibility/" target="_top" class="header__mobile-footer-nav-link" title="Accessibility">Accessibility</a>
-									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/footer/copyright/" class="header__mobile-footer-nav-link" title="Copyright">Copyright</a>
-									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/footer/privacy/" target="_top" class="header__mobile-footer-nav-link" title="Privacy">Privacy</a>
-									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/alerts/" target="_top" class="header__mobile-footer-nav-link" title="Alerts">Alerts</a>
-									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/footer/website-help/" class="header__mobile-footer-nav-link" title="Website Help">Website Help</a>
-									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/sitemap/" target="_blank" class="header__mobile-footer-nav-link" title="Sitemap">Sitemap</a>
-									</li>
 							</ul>
 						</div>
 				</div>
@@ -903,7 +873,7 @@
 <div class="figure figure--video js-video-player one-whole">
 		<div class="figure__container">
 			<a href="http://www.youtube.com/watch?v=iD0kcba_T90" 
-			   id="video55331" 
+			   id="video52843" 
 			   data-video-id="iD0kcba_T90" 
 			   class="js-video js-video-pane video-pane" 
 			   data-autoplay="true" 
@@ -1351,56 +1321,6 @@
 					<li class="footer__nav-item">
 						<a href="/en/footer/about-us/" target="_top" class="footer__nav-link" title="About Us">
 							About Us
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/visit-and-learn/how-parliament-works/glossary/" class="footer__nav-link" title="Glossary">
-							Glossary
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/footer/faqs/" target="_top" class="footer__nav-link" title="FAQs">
-							FAQs
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/footer/jobs/" class="footer__nav-link" title="Careers">
-							Careers
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/footer/contact-us/" target="_top" class="footer__nav-link" title="Contact us">
-							Contact us
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/footer/accessibility/" target="_top" class="footer__nav-link" title="Accessibility">
-							Accessibility
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/footer/copyright/" class="footer__nav-link" title="Copyright">
-							Copyright
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/footer/privacy/" target="_top" class="footer__nav-link" title="Privacy">
-							Privacy
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/alerts/" target="_top" class="footer__nav-link" title="Alerts">
-							Alerts
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/footer/website-help/" class="footer__nav-link" title="Website Help">
-							Website Help
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/sitemap/" target="_blank" class="footer__nav-link" title="Sitemap">
-							Sitemap
 						</a>
 					</li>
 			</ul>
