--- a/www.parliament.nz/729a59ea39a6a5df6245088c53a03462d9b8643b.html
+++ b/www.parliament.nz/729a59ea39a6a5df6245088c53a03462d9b8643b.html
@@ -22,7 +22,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-	<script type="text/javascript" src="/ruxitagentjs_ICA2SVfqr_10151180821210004.js" data-dtconfig="rid=RID_-105077500|rpid=-1770723454|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|bp2=1|featureHash=ICA2SVfqr|dpvc=1|lastModification=1537756700065|dtVersion=10151180821210004|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_ICA2SVfqr_10151180821210004.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="/ruxitagentjs_ICA2SVfjqr_10151180821210004.js" data-dtconfig="rid=RID_-105077500|rpid=1537965324|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|bp2=1|featureHash=ICA2SVfjqr|dpvc=1|lastModification=1537921240293|dtVersion=10151180821210004|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_ICA2SVfjqr_10151180821210004.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<!--[if (gt IE 9) | (IEMobile)]><!-->
 	<link rel="stylesheet" type="text/css" href="/content/css/style.EFJhYg.css">
 	<!--<![endif]-->
@@ -555,15 +555,14 @@
 
 	<div class="header__house-session hidden--l show--xl">
 			<div class="house-session__status rel figure">
-				<a href="/en/watch-parliament/" class="hidden show--l">
+				<a href="/en/pb/meetings-of-parliament/" class="hidden show--l">
 					<img src="/media/4524/debating-chamber-7-nov-2017.jpg?center=0.43428571428571427,0.49892933618843682&amp;mode=crop&amp;width=920&amp;height=518&amp;rnd=131546096540000000" alt="The debating chamber." title="Debating chamber 7 November 2017" class="house-session__img" />
 				</a>
 
-					<span class="session-status house-session__flag">Live</span>
 							</div>
 
 			<div class="house-session__summary">
-				<a href="/en/watch-parliament/">
+				<a href="/en/pb/meetings-of-parliament/">
 					<span class="house-session__text">The House is meeting today</span>
 				</a>
 			</div>
@@ -580,7 +579,7 @@
 		</a>
 	</li>
 	<li class="quick-links__item">
-		<a href="/en/watch-parliament/" class="quick-links__link theme__bg--hover">
+		<a href="/en/watch-parliament/ondemand" class="quick-links__link theme__bg--hover">
 			<span class="quick-links__icon iconf-play" aria-hidden="true"></span>
 			<span class="quick-links__text">
 				Watch
@@ -588,7 +587,7 @@
 		</a>
 	</li>
 	<li class="quick-links__item">
-		<a href="http://www.radionz.co.nz/audio/live/parliament" class="quick-links__link theme__bg--hover js-audio-play">
+		<a href="/en/watch-parliament/audio" class="quick-links__link theme__bg--hover ">
 			<span class="quick-links__icon iconf-headphones" aria-hidden="true"></span>
 			<span class="quick-links__text">
 				Listen
@@ -648,15 +647,14 @@
 
 	<div class="header__house-session hidden--l show--xl">
 			<div class="house-session__status rel figure">
-				<a href="/en/watch-parliament/" class="hidden show--l">
+				<a href="/en/pb/meetings-of-parliament/" class="hidden show--l">
 					<img src="/media/4524/debating-chamber-7-nov-2017.jpg?center=0.43428571428571427,0.49892933618843682&amp;mode=crop&amp;width=920&amp;height=518&amp;rnd=131546096540000000" alt="The debating chamber." title="Debating chamber 7 November 2017" class="house-session__img" />
 				</a>
 
-					<span class="session-status house-session__flag">Live</span>
 							</div>
 
 			<div class="house-session__summary">
-				<a href="/en/watch-parliament/">
+				<a href="/en/pb/meetings-of-parliament/">
 					<span class="house-session__text">The House is meeting today</span>
 				</a>
 			</div>
@@ -673,7 +671,7 @@
 		</a>
 	</li>
 	<li class="quick-links__item">
-		<a href="/en/watch-parliament/" class="quick-links__link theme__bg--hover">
+		<a href="/en/watch-parliament/ondemand" class="quick-links__link theme__bg--hover">
 			<span class="quick-links__icon iconf-play" aria-hidden="true"></span>
 			<span class="quick-links__text">
 				Watch
@@ -681,7 +679,7 @@
 		</a>
 	</li>
 	<li class="quick-links__item">
-		<a href="http://www.radionz.co.nz/audio/live/parliament" class="quick-links__link theme__bg--hover js-audio-play">
+		<a href="/en/watch-parliament/audio" class="quick-links__link theme__bg--hover ">
 			<span class="quick-links__icon iconf-headphones" aria-hidden="true"></span>
 			<span class="quick-links__text">
 				Listen
@@ -955,7 +953,7 @@
 <div class="figure figure--video js-video-player one-whole">
 		<div class="figure__container">
 			<a href="http://www.youtube.com/watch?v=kzoFDX9tFRk" 
-			   id="video64219" 
+			   id="video61507" 
 			   data-video-id="kzoFDX9tFRk" 
 			   class="js-video js-video-pane video-pane" 
 			   data-autoplay="true" 
