--- a/www.parliament.nz/fb6ff660b11b6d82815d9104ea6dcd7e13eeff0e.html
+++ b/www.parliament.nz/fb6ff660b11b6d82815d9104ea6dcd7e13eeff0e.html
@@ -22,7 +22,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-	<script type="text/javascript" src="/ruxitagentjs_ICA2SVfqr_10151180821210004.js" data-dtconfig="rid=RID_-1376458708|rpid=-369726815|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|bp2=1|featureHash=ICA2SVfqr|dpvc=1|lastModification=1537756700065|dtVersion=10151180821210004|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_ICA2SVfqr_10151180821210004.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="/ruxitagentjs_ICA2SVfjqr_10151180821210004.js" data-dtconfig="rid=RID_-1376458708|rpid=-1207371594|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|bp2=1|featureHash=ICA2SVfjqr|dpvc=1|lastModification=1537921240293|dtVersion=10151180821210004|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_ICA2SVfjqr_10151180821210004.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<!--[if (gt IE 9) | (IEMobile)]><!-->
 	<link rel="stylesheet" type="text/css" href="/content/css/style.EFJhSg.css">
 	<!--<![endif]-->
@@ -75,7 +75,7 @@
 	<div class="header">
 		<div class="wrapper cf">
 			<div class="header__primary">
-				<a href="/en/" class="header__masthead" title="New Zealand Parliament - Pāremata Aotearoa">
+				<a href="/" class="header__masthead" title="New Zealand Parliament - Pāremata Aotearoa">
 					<span class="header__title">New Zealand Parliament</span>
 					<span class="header__subtitle">Pāremata Aotearoa</span>
 				</a>
@@ -168,7 +168,7 @@
 							<ul class="megamenu" role="navigation">
 
 			<li class="megamenu__item megamenu__item--cyan">
-				<a class="megamenu__heading" title="Home" href="/en/"><span class="iconf-home"></span></a>
+				<a class="megamenu__heading" title="Home" href="/"><span class="iconf-home"></span></a>
 			</li>
 				<li class="megamenu__item megamenu__item--cyan template---ParliamentaryBusinessLanding js-megamenu-item">
 					<a href="/en/pb/" class="megamenu__heading" title="Parliamentary Business">
@@ -555,15 +555,14 @@
 
 	<div class="header__house-session hidden--l show--xl">
 			<div class="house-session__status rel figure">
-				<a href="/en/watch-parliament/" class="hidden show--l">
+				<a href="/en/pb/meetings-of-parliament/" class="hidden show--l">
 					<img src="/media/4524/debating-chamber-7-nov-2017.jpg?center=0.43428571428571427,0.49892933618843682&amp;mode=crop&amp;width=920&amp;height=518&amp;rnd=131546096540000000" alt="The debating chamber." title="Debating chamber 7 November 2017" class="house-session__img" />
 				</a>
 
-					<span class="session-status house-session__flag">Live</span>
 							</div>
 
 			<div class="house-session__summary">
-				<a href="/en/watch-parliament/">
+				<a href="/en/pb/meetings-of-parliament/">
 					<span class="house-session__text">The House is meeting today</span>
 				</a>
 			</div>
@@ -580,7 +579,7 @@
 		</a>
 	</li>
 	<li class="quick-links__item">
-		<a href="/en/watch-parliament/" class="quick-links__link theme__bg--hover">
+		<a href="/en/watch-parliament/ondemand" class="quick-links__link theme__bg--hover">
 			<span class="quick-links__icon iconf-play" aria-hidden="true"></span>
 			<span class="quick-links__text">
 				Watch
@@ -588,7 +587,7 @@
 		</a>
 	</li>
 	<li class="quick-links__item">
-		<a href="http://www.radionz.co.nz/audio/live/parliament" class="quick-links__link theme__bg--hover js-audio-play">
+		<a href="/en/watch-parliament/audio" class="quick-links__link theme__bg--hover ">
 			<span class="quick-links__icon iconf-headphones" aria-hidden="true"></span>
 			<span class="quick-links__text">
 				Listen
@@ -648,15 +647,14 @@
 
 	<div class="header__house-session hidden--l show--xl">
 			<div class="house-session__status rel figure">
-				<a href="/en/watch-parliament/" class="hidden show--l">
+				<a href="/en/pb/meetings-of-parliament/" class="hidden show--l">
 					<img src="/media/4524/debating-chamber-7-nov-2017.jpg?center=0.43428571428571427,0.49892933618843682&amp;mode=crop&amp;width=920&amp;height=518&amp;rnd=131546096540000000" alt="The debating chamber." title="Debating chamber 7 November 2017" class="house-session__img" />
 				</a>
 
-					<span class="session-status house-session__flag">Live</span>
 							</div>
 
 			<div class="house-session__summary">
-				<a href="/en/watch-parliament/">
+				<a href="/en/pb/meetings-of-parliament/">
 					<span class="house-session__text">The House is meeting today</span>
 				</a>
 			</div>
@@ -673,7 +671,7 @@
 		</a>
 	</li>
 	<li class="quick-links__item">
-		<a href="/en/watch-parliament/" class="quick-links__link theme__bg--hover">
+		<a href="/en/watch-parliament/ondemand" class="quick-links__link theme__bg--hover">
 			<span class="quick-links__icon iconf-play" aria-hidden="true"></span>
 			<span class="quick-links__text">
 				Watch
@@ -681,7 +679,7 @@
 		</a>
 	</li>
 	<li class="quick-links__item">
-		<a href="http://www.radionz.co.nz/audio/live/parliament" class="quick-links__link theme__bg--hover js-audio-play">
+		<a href="/en/watch-parliament/audio" class="quick-links__link theme__bg--hover ">
 			<span class="quick-links__icon iconf-headphones" aria-hidden="true"></span>
 			<span class="quick-links__text">
 				Listen
@@ -714,7 +712,7 @@
 
 	<ol class="nav breadcrumb">
 			<li class="breadcrumb__item">
-				<a href="/en/" class="breadcrumb__link theme__link" title="Home">Home</a>
+				<a href="/" class="breadcrumb__link theme__link" title="Home">Home</a>
 			</li>
 			<li class="breadcrumb__item">
 				<a href="/en/mps-and-electorates/" class="breadcrumb__link theme__link" title="MPs and Electorates">MPs and Electorates</a>
@@ -894,7 +892,7 @@
 <div class="figure figure--video js-video-player one-whole">
 		<div class="figure__container">
 			<a href="http://www.youtube.com/watch?v=gJnlRIGtzKg" 
-			   id="video77282" 
+			   id="video26364" 
 			   data-video-id="gJnlRIGtzKg" 
 			   class="js-video js-video-pane video-pane" 
 			   data-autoplay="true" 
