--- a/www.parliament.nz/19c928df257ddce0f49e9be66090b32d1d922da4.html
+++ b/www.parliament.nz/19c928df257ddce0f49e9be66090b32d1d922da4.html
@@ -22,7 +22,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-	<script type="text/javascript" src="/ruxitagentjs_ICA2SVfjqr_10153180914150608.js" data-dtconfig="rid=RID_-1727192008|rpid=710777035|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|srms=1;1;;;|bp2=1|featureHash=ICA2SVfjqr|dpvc=1|lastModification=1538098718173|dtVersion=10153180914150608|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_ICA2SVfjqr_10153180914150608.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="/ruxitagentjs_ICA2SVfjqr_10153180914150608.js" data-dtconfig="rid=RID_-1727192008|rpid=-1670561967|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|srms=1;1;;;|bp2=1|featureHash=ICA2SVfjqr|dpvc=1|lastModification=1538098718173|dtVersion=10153180914150608|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_ICA2SVfjqr_10153180914150608.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<!--[if (gt IE 9) | (IEMobile)]><!-->
 	<link rel="stylesheet" type="text/css" href="/content/css/style.EFJhYg.css">
 	<!--<![endif]-->
@@ -864,7 +864,7 @@
 <div class="figure figure--video js-video-player one-whole">
 		<div class="figure__container">
 			<a href="http://www.youtube.com/watch?v=AmJpXhK9UrM" 
-			   id="video73197" 
+			   id="video59564" 
 			   data-video-id="AmJpXhK9UrM" 
 			   class="js-video js-video-pane video-pane" 
 			   data-autoplay="true" 
