--- a/www.parliament.nz/eeeeeb8ed650f9b0cb2208ec4a5141e2d91ac057.html
+++ b/www.parliament.nz/eeeeeb8ed650f9b0cb2208ec4a5141e2d91ac057.html
@@ -22,7 +22,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-	<script type="text/javascript" src="/ruxitagentjs_ICA2SVfjqr_10153180914150608.js" data-dtconfig="rid=RID_-2047298610|rpid=360517287|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|srms=1;1;;;|bp2=1|featureHash=ICA2SVfjqr|dpvc=1|lastModification=1538098718173|dtVersion=10153180914150608|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_ICA2SVfjqr_10153180914150608.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="/ruxitagentjs_ICA2SVfjqr_10153180914150608.js" data-dtconfig="rid=RID_-2047298610|rpid=-205546816|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|srms=1;1;;;|bp2=1|featureHash=ICA2SVfjqr|dpvc=1|lastModification=1538098718173|dtVersion=10153180914150608|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_ICA2SVfjqr_10153180914150608.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<!--[if (gt IE 9) | (IEMobile)]><!-->
 	<link rel="stylesheet" type="text/css" href="/content/css/style.EFJhSg.css">
 	<!--<![endif]-->
@@ -909,7 +909,7 @@
 <div class="figure figure--video js-video-player one-whole">
 		<div class="figure__container">
 			<a href="http://www.youtube.com/watch?v=3hzavdNrfMQ" 
-			   id="video11871" 
+			   id="video71698" 
 			   data-video-id="3hzavdNrfMQ" 
 			   class="js-video js-video-pane video-pane" 
 			   data-autoplay="true" 
